--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "axios": "^0.19.2",
     "google-maps-react": "^2.0.6",
     "react": "^16.13.1",
+    "react-burger-menu":"2.6.15",
     "react-dom": "^16.13.1",
     "react-google-maps": "^9.4.5",
+    "react-google-places-autocomplete": "^2.0.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
